Fix mobile layout issue on workout summary page

--- a/frontend/src/assets/workout-tracker.css
+++ b/frontend/src/assets/workout-tracker.css
@@ -89,7 +89,8 @@ Add the correct text decoration in Chrome, Edge, and Safari.
 */
 
 abbr[title] {
-	text-decoration: underline dotted;
+	-webkit-text-decoration: underline dotted;
+	        text-decoration: underline dotted;
 }
 
 /**
@@ -436,6 +437,16 @@ textarea {
   resize: vertical;
 }
 
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  opacity: 1;
+  color: #9fa6b2;
+}
+
+input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+  opacity: 1;
+  color: #9fa6b2;
+}
+
 input::placeholder,
 textarea::placeholder {
   opacity: 1;
@@ -590,6 +601,16 @@ video {
 	border-color: #1c64f2;
 }
 
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+	color: #6b7280;
+	opacity: 1;
+}
+
+input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+	color: #6b7280;
+	opacity: 1;
+}
+
 input::placeholder, textarea::placeholder {
 	color: #6b7280;
 	opacity: 1;
@@ -636,8 +657,10 @@ select {
 	vertical-align: middle;
 	background-origin: border-box;
 	-webkit-user-select: none;
+	    -ms-user-select: none;
 	        user-select: none;
-	flex-shrink: 0;
+	-webkit-flex-shrink: 0;
+	        flex-shrink: 0;
 	height: 1rem;
 	width: 1rem;
 	color: #1c64f2;
@@ -1352,9 +1375,11 @@ select {
 	display: block;
 }
 .flex {
+	display: -webkit-flex;
 	display: flex;
 }
 .inline-flex {
+	display: -webkit-inline-flex;
 	display: inline-flex;
 }
 .grid {
@@ -1415,10 +1440,12 @@ select {
 	max-width: 24rem;
 }
 .flex-1 {
-	flex: 1 1 0%;
+	-webkit-flex: 1 1 0%;
+	        flex: 1 1 0%;
 }
 .flex-shrink-0 {
-	flex-shrink: 0;
+	-webkit-flex-shrink: 0;
+	        flex-shrink: 0;
 }
 .transform {
 	--tw-translate-x: 0;
@@ -1428,10 +1455,12 @@ select {
 	--tw-skew-y: 0;
 	--tw-scale-x: 1;
 	--tw-scale-y: 1;
-	transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+	-webkit-transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+	        transform: translateX(var(--tw-translate-x)) translateY(var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .origin-top-right {
-	transform-origin: top right;
+	-webkit-transform-origin: top right;
+	        transform-origin: top right;
 }
 .translate-x-32 {
 	--tw-translate-x: 8rem;
@@ -1469,29 +1498,36 @@ select {
 .grid-cols-workout-item {
 	grid-template-columns: 100px minmax(200px, 250px) repeat(2, 125px);
 }
-.grid-cols-3 {
-	grid-template-columns: repeat(3, minmax(0, 1fr));
+.grid-cols-1 {
+	grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 .flex-col {
-	flex-direction: column;
+	-webkit-flex-direction: column;
+	        flex-direction: column;
 }
 .items-center {
-	align-items: center;
+	-webkit-align-items: center;
+	        align-items: center;
 }
 .items-end {
-	align-items: flex-end;
+	-webkit-align-items: flex-end;
+	        align-items: flex-end;
 }
 .items-start {
-	align-items: flex-start;
+	-webkit-align-items: flex-start;
+	        align-items: flex-start;
 }
 .justify-center {
-	justify-content: center;
+	-webkit-justify-content: center;
+	        justify-content: center;
 }
 .justify-between {
-	justify-content: space-between;
+	-webkit-justify-content: space-between;
+	        justify-content: space-between;
 }
 .justify-end {
-	justify-content: flex-end;
+	-webkit-justify-content: flex-end;
+	        justify-content: flex-end;
 }
 .gap-8 {
 	gap: 2rem;
@@ -1897,6 +1933,14 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(191, 18, 93, var(--tw-text-opacity));
 }
+.placeholder-gray-400::-webkit-input-placeholder {
+	--tw-placeholder-opacity: 1;
+	color: rgba(159, 166, 178, var(--tw-placeholder-opacity));
+}
+.placeholder-gray-400:-ms-input-placeholder {
+	--tw-placeholder-opacity: 1;
+	color: rgba(159, 166, 178, var(--tw-placeholder-opacity));
+}
 .placeholder-gray-400::placeholder {
 	--tw-placeholder-opacity: 1;
 	color: rgba(159, 166, 178, var(--tw-placeholder-opacity));
@@ -1939,7 +1983,9 @@ select {
 	--tw-ring-opacity: 0.05;
 }
 .transition {
+	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, -webkit-transform;
 	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform;
+	transition-property: background-color, border-color, color, fill, stroke, opacity, box-shadow, transform, -webkit-transform;
 	transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 	transition-duration: 150ms;
 }
@@ -2209,6 +2255,7 @@ select {
 	}
 
 	.sm\:flex {
+		display: -webkit-flex;
 		display: flex;
 	}
 
@@ -2269,27 +2316,33 @@ select {
 	}
 
 	.sm\:flex-row-reverse {
-		flex-direction: row-reverse;
+		-webkit-flex-direction: row-reverse;
+		        flex-direction: row-reverse;
 	}
 
 	.sm\:flex-row {
-		flex-direction: row;
+		-webkit-flex-direction: row;
+		        flex-direction: row;
 	}
 
 	.sm\:items-start {
-		align-items: flex-start;
+		-webkit-align-items: flex-start;
+		        align-items: flex-start;
 	}
 
 	.sm\:items-center {
-		align-items: center;
+		-webkit-align-items: center;
+		        align-items: center;
 	}
 
 	.sm\:justify-end {
-		justify-content: flex-end;
+		-webkit-justify-content: flex-end;
+		        justify-content: flex-end;
 	}
 
 	.sm\:justify-center {
-		justify-content: center;
+		-webkit-justify-content: center;
+		        justify-content: center;
 	}
 
 	.sm\:gap-4 {
@@ -2387,6 +2440,10 @@ select {
 		margin-bottom: 7rem;
 	}
 
+	.md\:grid-cols-3 {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
+
 	.md\:rounded-lg {
 		border-radius: 0.5rem;
 	}
@@ -2430,6 +2487,7 @@ select {
 	}
 
 	.lg\:flex {
+		display: -webkit-flex;
 		display: flex;
 	}
 
@@ -2446,11 +2504,13 @@ select {
 	}
 
 	.lg\:flex-1 {
-		flex: 1 1 0%;
+		-webkit-flex: 1 1 0%;
+		        flex: 1 1 0%;
 	}
 
 	.lg\:flex-shrink-0 {
-		flex-shrink: 0;
+		-webkit-flex-shrink: 0;
+		        flex-shrink: 0;
 	}
 
 	.lg\:px-8 {
